# libcmdline

./: .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: create_compile_commands.cmake  libcmdlineConfig.cmake.in
example/: CMakeLists.txt  main.cpp
include/libcmdline/: CMakeLists.txt  cmdline.h
src/: .cmdline.cpp.swp  CMakeLists.txt  cmdline.cpp
test/: .parsertest.cpp.swp  CMakeLists.txt  argtest.cpp  helptest.cpp  optiontest.cpp  parsertest.cpp  switchtest.cpp  test.cpp
